# tcc-project

./: CMakeLists.txt  README.md
client/: Makefile  client
client/src/: Config.cpp  Config.hpp  Console.cpp  Event.cpp  Event.hpp  Game.cpp  Game.h  Game.hpp  GameUI.cpp  GameUI.hpp  GameWindow.cpp  GameWindow.hpp  GraphicsPrimitives.cpp  InputHandler.cpp  InputHandler.hpp  Main.cpp  Screen.cpp  Screen.hpp  UI.cpp  UI.hpp
client/src/engine/: Console.cpp  Console.h  GElement.cpp  GElement.h  GEvent.cpp  GEvent.h  InputHandler.cpp  InputHandler.h
client/src/engine/elements/: Entity.cpp  Entity.h
client/src/engine/internal/: Config.cpp  Config.h  DataLoader.cpp  DataLoader.h  Error.cpp  Error.h
client/src/engine/patterns/: Observer.cpp  Observer.h  Singleton.cpp  Singleton.h
client/src/engine/ui/: GSpriteViewer.cpp  GSpriteViewer.h  GameUI.cpp  GameUI.h  GameWindow.cpp  GameWindow.h  GraphicsPrimitives.cpp  GraphicsPrimitives.h  Screen.cpp  Screen.h  UI.cpp  UI.h
